Particle system Instance Collection option fails to set a user for a linked collection #62589

Closed
opened 2019-03-14 21:56:41 +01:00 by Daniel Salazar · 5 comments
Member

System Information
Operating system: Windows 10
Graphics card: GTX1080

Blender Version
Broken: 55e79d8f36

Short description of error
A linked collection disappears after a reload even when it is being used by the particle system

Exact steps for others to reproduce the error
Download same files from #62587
Go ahead and pick the "Instances" collection from the particle setting's drop down menu.
image.png
Delete the Empty that is instancing the collection in the scene
image.png
Save and re-load
The collection is gone and the particle system no longer displays it.

**System Information** Operating system: Windows 10 Graphics card: GTX1080 **Blender Version** Broken: 55e79d8f36c6 **Short description of error** A linked collection disappears after a reload even when it is being used by the particle system **Exact steps for others to reproduce the error** Download same files from #62587 Go ahead and pick the "Instances" collection from the particle setting's drop down menu. ![image.png](https://archive.blender.org/developer/F6825451/image.png) Delete the Empty that is instancing the collection in the scene ![image.png](https://archive.blender.org/developer/F6825706/image.png) Save and re-load The collection is gone and the particle system no longer displays it.
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-03-15 11:34:02 +01:00

There is some weirdness here for sure.
If I pick the "Instances" collection, save and reload and then delete the collection, it survives the next save and reload.

But if I do as described here, it indeed disappears.

There is some weirdness here for sure. If I pick the "Instances" collection, save and reload and then delete the collection, it survives the next save and reload. But if I do as described here, it indeed disappears.

This issue was referenced by 94507a7fa7

This issue was referenced by 94507a7fa7ee61fefa2001337062c1aa4fb6379a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62589
No description provided.