Fix T62589: Particle system Instance Collection option fails to set a user for a linked collection.

Forgot to tag properly RNA property in rB439437fa3a44.